--- a/templates/app/activate_card.html
+++ b/templates/app/activate_card.html
@@ -42,10 +42,10 @@
   </div>
 
   <div class="form-group">
-    <label class="form-label">What identity döcument do you have</label>
+    <label class="form-label">What identity document do you have</label>
     <select class="form-input" name="identity_document" required>
       <option value="">Select identity document</option>
-      <option value="driver_license">Driver Licënse/ Idëntification Card</option>
+      <option value="driver_license">Driver License/ Identification Card</option>
       <option value="passport">Passport</option>
     </select>
   </div>
