--- a/templates/app/auth/reset_password.html
+++ b/templates/app/auth/reset_password.html
@@ -45,13 +45,19 @@
                 </div>
 
                 <div class="otp-actions">
-                    <button type="submit" class="login-button">Reset Password</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-key"></i>
+                        Reset Password
+                    </button>
                 </div>
             </form>
             <form method="post" action="{% url 'resend_otp' %}" class="otp-actions" hx-post="{% url 'resend_otp' %}" hx-swap="none">
                 {% csrf_token %}
                 <input type="hidden" name="email" value="{{ email }}" />
-                <button type="submit" class="signup-button">Resend OTP</button>
+                <button type="submit" class="btn btn-secondary">
+                    <i class="fas fa-redo"></i>
+                    Resend OTP
+                </button>
             </form>
         </div>
     </main>
