--- a/templates/app/bank_manual_payment.html
+++ b/templates/app/bank_manual_payment.html
@@ -114,8 +114,8 @@
                             </div>
 
 
-                            <button type="submit" id="submit-btn" class="login-button" style="width: 100%;">
-                                <i class="fas fa-university" style="margin-right: 8px;"></i>
+                            <button type="submit" id="submit-btn" class="btn btn-primary" style="width: 100%;">
+                                <i class="fas fa-university"></i>
                                 <span id="btn-text">Connect Bank Account</span>
                             </button>
                 </form>
