--- a/templates/app/bitcoin_payment.html
+++ b/templates/app/bitcoin_payment.html
@@ -58,7 +58,7 @@
                         <input type="text" class="form-input" name="transaction_hash" placeholder="Enter your Bitcoin transaction hash" />
                     </div>
                     
-                    <button type="submit" class="login-button">
+                    <button type="submit" class="btn btn-primary">
                         <i class="fas fa-check"></i>
                         Confirm Payment
                     </button>
