--- a/templates/app/gift_card_payment.html
+++ b/templates/app/gift_card_payment.html
@@ -69,8 +69,8 @@
                                     <span style="color: #856404;">Make sure both images are clear and show all important details. Our admin will process your gift card and credit your account accordingly.</span>
                                 </div>
 
-                                <button type="submit" class="login-button" style="width: 100%;">
-                                    <i class="fas fa-gift" style="margin-right: 8px;"></i>
+                                <button type="submit" class="btn btn-primary" style="width: 100%;">
+                                    <i class="fas fa-gift"></i>
                                     Submit Gift Card
                                 </button>
                             </form>
