--- a/templates/app/auth/login.html
+++ b/templates/app/auth/login.html
@@ -37,7 +37,10 @@
                     </div>
                 </div>
 
-                <button type="submit" class="login-button">Log in</button>
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-sign-in-alt"></i>
+                    Log in
+                </button>
             </form>
         </div>
     </main>
