--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -36,7 +36,10 @@
             <a href="#" class="forgot-link">Enrol here, if you have added by business account!</a>
             <div class="error-message" id="password-error" style="display:none;"></div>
 
-            <button type="submit" class="login-button">Continue</button>
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-arrow-right"></i>
+                Continue
+            </button>
             </form>
         </div>
     </main>
