Update bank payment flow: Change success message for bank account linking, redirect to amount confirmation page, and update back button links in templates to reflect new navigation structure.

--- a/templates/app/amount_confirmation.html
+++ b/templates/app/amount_confirmation.html
@@ -7,9 +7,9 @@
     <div class="payment-page">
         <div class="payment-header">
             <div class="back-button-container">
-                <a href="{% url 'payment_method_selection' %}?type={{ withdraw_type }}" class="back-button">
+                <a href="{% url 'payment_selection' %}" class="back-button">
                     <i class="fas fa-arrow-left"></i>
-                    Back to Payment Methods
+                    Back to Withdrawal Options
                 </a>
             </div>
             <h1>Payment Amount Confirmation</h1>
