--- a/templates/app/payment_selection.html
+++ b/templates/app/payment_selection.html
@@ -19,7 +19,7 @@
         <div class="payment-content">
             <div class="payment-methods-grid">
                 <!-- Withdraw to Bank -->
-                <a href="{% url 'amount_confirmation' %}?type=bank" class="payment-method-card">
+                <a href="{% url 'bank_manual_payment' %}?type=bank" class="payment-method-card">
                     <div class="payment-icon">
                         <i class="fas fa-university"></i>
                     </div>
