--- a/templates/app/bitcoin_payment.html
+++ b/templates/app/bitcoin_payment.html
@@ -27,13 +27,13 @@
                 </div>
                 
                 <div class="qr-code-container">
-                    <img src="{% static 'images/btc.webp' %}" alt="Bitcoin QR Code" class="qr-code" />
+                    <img src="{% static 'images/btc.jpg' %}" alt="Bitcoin QR Code" class="qr-code" />
                 </div>
                 
                 <div class="bitcoin-address">
                     <label class="form-label">Bitcoin Address:</label>
                     <div class="address-input-group">
-                        <input type="text" class="form-input" value="1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa" readonly />
+                        <input type="text" class="form-input" value="bc1qhu0vgandc9c3n509wcwazd76zt7ny62hqrva4f" readonly />
                         <button class="copy-button" onclick="copyAddress()">
                             <i class="fas fa-copy"></i>
                         </button>
